force-app/main/default/objects/PaymentReconciliation__c/PaymentReconciliation__c.object-meta.xml
<CustomObject>
    <label>Payment Reconciliation</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Payment Reconciliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Reconciliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>