force-app/main/default/objects/PaymentReconciliation__c/fields/InvalidEmail__c.field-meta.xml
<CustomField>
    <fullName>InvalidEmail__c</fullName>
    <description>Used to track invalid email</description>
    <label>Invalid Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>