force-app/main/default/objects/PaymentReconciliation__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>