force-app/main/default/objects/PaymentReconciliation__c/fields/RefundEmailSentOnDate__c.field-meta.xml
<CustomField>
    <fullName>RefundEmailSentOnDate__c</fullName>
    <label>Refund Email Sent On Date</label>
    <type>DateTime</type>
</CustomField>