force-app/main/default/objects/PaymentReconciliation__c/fields/Related_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment_Amount__c</fullName>
    <formula>RelatedPayment__r.pymt__Amount__c</formula>
    <label>Related Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>