force-app/main/default/objects/PaymentReconciliation__c/fields/Related_Payment_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment_Card_Type__c</fullName>
    <formula>TEXT(RelatedPayment__r.pymt__Card_Type__c )</formula>
    <label>Related Payment Card Type</label>
    <type>Text</type>
</CustomField>