force-app/main/default/objects/PaymentReconciliation__c/fields/Related_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment_Date__c</fullName>
    <formula>RelatedPayment__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Payment Date</label>
    <type>Date</type>
</CustomField>