force-app/main/default/objects/PaymentReconciliation__c/fields/Related_Payment_Last_4_Digitis__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment_Last_4_Digitis__c</fullName>
    <formula>RelatedPayment__r.pymt__Last_4_Digits__c</formula>
    <label>Related Payment Last 4 Digitis</label>
    <type>Text</type>
</CustomField>