force-app/main/default/objects/PaymentReconciliation__c/fields/Related_Payment_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment_Last_Name__c</fullName>
    <formula>RelatedPayment__r.pymt__Billing_Last_Name__c</formula>
    <label>Related Payment Last Name</label>
    <type>Text</type>
</CustomField>