force-app/main/default/objects/PaymentReconciliation__c/fields/Related_Payment_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Payment_Transaction_ID__c</fullName>
    <formula>RelatedPayment__r.pymt__Transaction_Id__c</formula>
    <label>Related Payment Transaction ID</label>
    <type>Text</type>
</CustomField>