force-app/main/default/objects/PaymentReconciliation__c/fields/RelatedPayment__c.field-meta.xml
<CustomField>
    <fullName>RelatedPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>JF 3/19/24: Created this field for referencing the sister payment that we have record of in Salesforce</description>
    <label>Related Payment</label>
    <referenceTo>pymt__PaymentX__c</referenceTo>
    <relationshipLabel>Payment Reconciliations</relationshipLabel>
    <relationshipName>Payment_Reconciliations</relationshipName>
    <type>Lookup</type>
</CustomField>