force-app/main/default/objects/PaymentReconciliation__c/fields/SendRefundEmail__c.field-meta.xml
<CustomField>
    <fullName>SendRefundEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Refund Email</label>
    <type>Checkbox</type>
</CustomField>