force-app/main/default/objects/PaymentReconciliation__c/fields/TransactionID__c.field-meta.xml
<CustomField>
    <fullName>TransactionID__c</fullName>
    <label>Transaction ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>